# study

./: .gitignore  README.md  astyle_params  tesktkate.files  tesktkate.includes
algo/timus/1439/: harryTimus.cpp
algo/timus/1449/: main.cpp
algo/timus/1517/: main.cpp
c++/connected4/: Makefile  field.cpp  field.h  game.cpp  game.h  main.cpp
c++/ha1/: Makefile  huffman.cpp  huffman.h  main.cpp
c++/ha2/: Makefile  ast.h  errors.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  visitor.h
comput_geometry/1task/: Makefile
comput_geometry/1task/src/: Algo.java  Edge.java  Main.java  Point.java  Polygon.java
comput_geometry/2task/src/: Main.java  Point.java  Polygon.java
comput_geometry/2task/src/utils/: Pair.java
comput_vision/1dz/1task/: main.py
comput_vision/1task/: main.py
comput_vision/2task/: main.py
comput_vision/3task/: main.py
comput_vision/4task/: main.py
mps/.mps/: modules.xml  workspace.xml
mps/Shapes/.mps/: modules.xml  workspace.xml
mps/Shapes/languages/Shapes/: Shapes.mpl
mps/Shapes/languages/Shapes/generator/template/: main@generator.mps
mps/Shapes/languages/Shapes/languageModels/: behavior.mps  constraints.mps  editor.mps  structure.history  structure.mps  typesystem.mps
mps/Shapes/languages/Shapes/sandbox/: Shapes.sandbox.msd
mps/Shapes/languages/Shapes/source_gen.caches/Shapes/: dependencies  (+1 more)
mps/StopWatch/.mps/: workspace.xml
mps/StopWatch/languages/StopWatch/: StopWatch.mpl
mps/StopWatch/languages/StopWatch/languageModels/: behavior.mps  constraints.mps  editor.mps  structure.history  structure.mps  typesystem.mps
mps/StopWatch/languages/StopWatch/sandbox/: StopWatch.sandbox.msd
mps/languages/mps.demo.calc/: mps.demo.calc.mpl
mps/languages/mps.demo.calc/.mps/: .name  modules.xml  workspace.xml
mps/languages/mps.demo.calc/generator/template/: main@generator.mps
mps/languages/mps.demo.calc/languageModels/: behavior.mps  constraints.mps  editor.mps  structure.history  structure.mps  typesystem.mps
mps/languages/mps.demo.calc/languages/mps.demo.calc/: mps.demo.calc.mpl
mps/languages/mps.demo.calc/runtime/: mps.demo.calc.runtime.msd
mps/languages/mps.demo.calc/sandbox/: mps.demo.calc.sandbox.msd
network/: .gitignore  1.txt  temp  Новый.rtf
network/clientserver/: Main.py
network/clientserver/client/src/: Client.java  ClientData.java  DataBuffer.java  DataPreparation.java  Logger.java  Main.java
network/clientserver/server/src/: DataPerClient.java  Person.java  Server.java  ServerData.java
network/icmp/icmp/: CMakeLists.txt  main.cpp
network/icmp/icmp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  icmp  icmp.cbp
scala/dz1/src/: FSTTask.sc  SNDTask.sc
scala/hw2/src/main/scala/: Task1.scala  Task2.scala  Task3.scala  Task4.scala
scala/hw3/src/: Task1.scala  Task2.scala
sd/commandline/: Printer.java  REPLConsole.java
sd/commandline/evaluator/: Evaluator.java
sd/commandline/lexer/: Lexer.java
sd/commandline/parser/: ExpVisitor.java  Parser.java
sd/commandline/parser/expressions/: Assignment.java  Div.java  Num.java  Sum.java
sd/commandline/src/: REPLConsole.java
sd/commandline/src/evaluator/: ExpressionVisitor.java
sd/commandline/src/lexer/: Token.java
sd/commandline/src/parser/: Parser.java
sd/commandline/src/parser/expressions/: BiExp.java  Exp.java  Mul.java  Sub.java  Variable.java
sd/commandline/src/undo/: Action.java  ActionList.java
stat_learning/: hw1.R
stat_learning/hw1/: hw1.R  subscribe.txt
stat_learning/labs_examples/: Hist19sep.R  Hist5sep.R
vm/2/: Makefile  bytecode_visitor.cpp  bytecode_visitor.h  context.h  errors.h  main.cpp
vm/3/: Makefile  bytecode_visitor.cpp  bytecode_visitor.h  context.h  exceptions.h  interpretator.cpp  interpretator.h  main.cpp  utils.h
vm/task1/: CMakeLists.txt
vm/test/: CMakeLists.txt  Makefile  vmtask.files  vmtask.includes
vm/test/students/2014/ustuzhanina/1/: ast_printer.cpp
vm/test/temp/temp/: main.cpp
vm/test/temp/temp.xcodeproj/: project.pbxproj
vm/test/temp/temp.xcodeproj/xcuserdata/kate.xcuserdatad/xcschemes/: temp.xcscheme
vm/trunk/.svn/: wc.db
(+218 files in other folders)
