cmake_minimum_required(VERSION 2.8.4)
project(test)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    include/ast.h
    include/mathvm.h
    include/visitors.h
    libs/AsmJit/ApiBegin.h
    libs/AsmJit/ApiEnd.h
    libs/AsmJit/AsmJit.h
    libs/AsmJit/Assembler.cpp
    libs/AsmJit/Assembler.h
    libs/AsmJit/AssemblerX86X64.cpp
    libs/AsmJit/AssemblerX86X64.h
    libs/AsmJit/Build.h
    libs/AsmJit/CodeGenerator.cpp
    libs/AsmJit/CodeGenerator.h
    libs/AsmJit/Compiler.cpp
    libs/AsmJit/Compiler.h
    libs/AsmJit/CompilerX86X64.cpp
    libs/AsmJit/CompilerX86X64.h
    libs/AsmJit/Config.h
    libs/AsmJit/CpuInfo.cpp
    libs/AsmJit/CpuInfo.h
    libs/AsmJit/Defs.cpp
    libs/AsmJit/Defs.h
    libs/AsmJit/DefsX86X64.cpp
    libs/AsmJit/DefsX86X64.h
    libs/AsmJit/Logger.cpp
    libs/AsmJit/Logger.h
    libs/AsmJit/MemoryManager.cpp
    libs/AsmJit/MemoryManager.h
    libs/AsmJit/Operand.cpp
    libs/AsmJit/Operand.h
    libs/AsmJit/OperandX86X64.cpp
    libs/AsmJit/OperandX86X64.h
    libs/AsmJit/Platform.cpp
    libs/AsmJit/Platform.h
    libs/AsmJit/Util.cpp
    libs/AsmJit/Util.h
    libs/AsmJit/Util_p.h
    students/2014/atamas/1/ast_printer.cpp
    students/2014/atamas/1/main.cpp
    students/2014/ivanov/AstPrinter/ast_printer.cpp
    students/2014/ivanov/AstPrinter/main.cpp
    students/2014/obedin/1/ast_printer.cpp
    students/2014/obedin/1/main.cpp
    students/2014/ovchinnikov/1/ast_printer.cpp
    students/2014/ovchinnikov/1/main.cpp
    students/2014/ustuzhanina/1/ast_printer.cpp
    students/2014/ustuzhanina/1/main.cpp
    students/2014/zharkov/1/ast_printer.cpp
    students/2014/zharkov/1/main.cpp
    tests/additional/fail/for_range.mvm
    tests/additional/fail/for_var.mvm
    tests/additional/fail/function-cast.mvm
    tests/additional/fail/function-return-void.mvm
    tests/additional/fail/if-fun.mvm
    tests/additional/fail/op_bin.mvm
    tests/additional/fail/op_not.mvm
    tests/additional/fail/op_streq.mvm
    tests/additional/fail/op_sub.mvm
    tests/additional/fail/range.mvm
    tests/additional/fail/vars.mvm
    tests/additional/3function.expect
    tests/additional/ackermann.expect
    tests/additional/ackermann.mvm
    tests/additional/ackermann_closure.expect
    tests/additional/ackermann_closure.mvm
    tests/additional/casts.expect
    tests/additional/casts.mvm
    tests/additional/closure.mvm
    tests/additional/complex.expect
    tests/additional/complex.mvm
    tests/additional/complex2.expect
    tests/additional/complex2.mvm
    tests/additional/fib.expect
    tests/additional/fib.mvm
    tests/additional/fib_closure.expect
    tests/additional/fib_closure.mvm
    tests/additional/function-call.expect
    tests/additional/function-call.mvm
    tests/additional/function-cast.expect
    tests/additional/function-cast.mvm
    tests/additional/function.expect
    tests/additional/function.mvm
    tests/additional/vars.expect
    tests/additional/vars.mvm
    tests/astprint/run.py
    tests/optional/function_native.expect
    tests/optional/function_native.mvm
    tests/optional/plot.mvm
    tests/perf/lissajous.mvm
    tests/perf/plot.mvm
    tests/perf/prime.mvm
    tests/add.expect
    tests/add.mvm
    tests/assign.expect
    tests/assign.mvm
    tests/bitwise.expect
    tests/bitwise.mvm
    tests/div.expect
    tests/div.mvm
    tests/expr.expect
    tests/expr.mvm
    tests/for.expect
    tests/for.mvm
    tests/function.expect
    tests/function.mvm
    tests/if.expect
    tests/if.mvm
    tests/literal.expect
    tests/literal.mvm
    tests/mul.expect
    tests/mul.mvm
    tests/run.py
    tests/sub.expect
    tests/sub.mvm
    tests/var.mvm
    tests/while.expect
    tests/while.mvm
    vm/ast.cpp
    vm/interpreter.cpp
    vm/jit.cpp
    vm/jit.h
    vm/mathvm.cpp
    vm/parser.cpp
    vm/parser.h
    vm/scanner.cpp
    vm/scanner.h
    vm/translator.cpp
    vm/utils.cpp
    common.mk
    main.cpp
    Makefile
    README.txt)

add_executable(test ${SOURCE_FILES})